--- a/index.html
+++ b/index.html
@@ -1,45 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | Four card feature section</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+  <main>
+    <div class="container">
+      <section class="title">
+        <p class="sub-head">Reliable, efficient delivery</p>
+        <h1>Powered by Technology</h1>
+        <p class="head-text">Our Artificial Intelligence powered tools use millions of project data points
+          to ensure that your project is successful</p>
+      </section>
+      <article class="features">
+        <div class="card super">
+          <h2 class="card-head">Supervisor</h2>
+          <p class="card-text">Monitors activity to identify project roadblocks</p>
+          <img src="images/icon-supervisor.svg" alt="lens icon" class="icon">
+        </div>
+        <div class="card team">
+          <h2 class="card-head">Team Builder</h2>
+          <p class="card-text">Scans our talent network to create the optimal team for your project</p>
+          <img src="images/icon-team-builder.svg" alt="team icon" class="icon">
+        </div>
+        <div class="card karma">
+          <h2 class="card-head">Karma</h2>
+          <p class="card-text">Regularly evaluates our talent to ensure quality</p>
+          <img src="images/icon-karma.svg" alt="light bulb" class="icon">
+        </div>
+        <div class="card calc">
+          <h2 class="card-head">Calculator</h2>
+          <p class="card-text">Uses data from past projects to provide better delivery estimates</p>
+          <img src="images/icon-calculator.svg" alt="calculator" class="icon">
+        </div>
+      </article>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://www.frontendmentor.io/profile/Ibrahim-Eltoukhy" target="_blank">Ibrahim Eltoukhy</a>.
+      </p>
+    </div>
+  </main>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
 </body>
+
 </html>
